Search layyy(mao)out
ok

--- a/GGDB/app/src/main/res/layout/activity_main.xml
+++ b/GGDB/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_marginBottom="46dp"
         android:layout_marginEnd="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -31,9 +32,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button4"
+        android:text="SEARCH"
+        android:id="@+id/search"
         android:layout_above="@+id/button2"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="Search"/>
 
 </RelativeLayout>
