--- a/GGDB/app/src/main/res/layout/activity_main.xml
+++ b/GGDB/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-
-    <TextView android:text="GGDB" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
-        android:layout_marginBottom="46dp"
-        android:layout_marginEnd="50dp"
+        android:text="@string/userProfileButtonString"
+        android:id="@+id/btnUserProfile"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/Login"
-        android:layout_alignTop="@+id/button2"
-        android:layout_toEndOf="@+id/textView"
-        android:onClick="Login"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SEARCH"
-        android:id="@+id/search"
-        android:layout_above="@+id/button2"
         android:layout_centerHorizontal="true"
-        android:onClick="Search"/>
-
+        android:layout_marginBottom="145dp" />
 </RelativeLayout>
