--- a/GGDB/app/src/main/res/layout/activity_main.xml
+++ b/GGDB/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="145dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button2"
+        android:layout_alignTop="@+id/btnUserProfile"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp"
+        android:onClick="onClick" />
+
 </RelativeLayout>
